# mcp-weaviate

./: .env.example  .pre-commit-config.yaml  README.md  RELEASE.md  main.py  plan.md  pyproject.toml  test_client.py  test_config.py
.github/workflows/: ci.yml  prepare-release.yml  publish.yml  version-check.yml
src/: __init__.py  config.py  dev_main.py  main.py  tools.py  weaviate_client.py
tests/: __init__.py  conftest.py  test_client_manager.py  test_config.py  test_tools.py  test_validation.py
